# mod3

./: ARCHITECTURE.md  CHANGELOG.md  CHANNELS.md  CONTRIBUTING.md  README.md  access.py  agent_loop.py  audio_subscribers.py  bus.py  bus_bridge_runner.py  channels.py  chat_flow_log.py  cogos_agent_bridge.py  compositions.py  engine.py  http_api.py  identity_projection_handler.py  inbound.py  mcp.channel.json  mcp_shim.py  message_store.py  output_queue.py  pipeline_graph.py  pipeline_state.py  providers.py  pyproject.toml  seats.py  server.py  turn_detector.py  vad.py  voice_profile_io.py  voice_profile_schema.py  voice_profiles.py
bargein/: __init__.py
clients/: channel_client.py
dashboard/: acp-transport.js  console.html  index.html  sessions.html  trace-panel.html  transport.js  voice-lab.html
integrations/: __init__.py
modules/: voice.py
schemas/: __init__.py  bargein.py  channel.py  modality.py  operations.py  primitives.py  wire.py
scripts/: fetch_smart_turn_weights.py  seed_voice_profiles.example.json  seed_voice_profiles.py
tests/: test_acp_client_flow.py  test_acp_schemas.py  test_acp_server.py  test_acp_session_management.py  test_acp_wire_shape.py  test_audio_subscribers.py  test_broadcast_message.py  test_browser_channel_routing.py  test_channel_client_reconnect.py  test_channel_pipeline_graph.py  test_claude_session_id_binding.py  test_compositions_api.py  test_dashboard_chat.py  test_dashboard_static.py  test_dashboard_version_pills.py  test_engine.py  test_http_schemas.py  test_identity_projection_handler.py  test_integration.py  test_intentional_stages.py  test_message_store.py  test_multi_identity_binding.py  test_phase_timer.py  test_pipecat_tts_service.py  test_rtvi_inbound_audio.py  test_rtvi_integration.py  test_schemas.py  test_seat_fanout.py  test_seat_session_mirror.py  test_session_auto_create.py  test_smart_turn.py  test_speak_chat_mirror.py  test_speak_endpoint.py  test_speech_queue.py  test_stt_dedup.py  test_stt_executor_isolation.py  test_voice_profile_compose_api.py  test_voice_profile_curation.py  (+7 more)
(+39 files in other folders)
