[project]
name = "mod3"
version = "0.4.0"
description = "Model Modality Modulator — multi-model TTS + VAD on Apple Silicon"
requires-python = ">=3.12"

[project.optional-dependencies]
pipecat = ["pipecat-ai>=0.0.50"]

[tool.setuptools]
py-modules = ["_version", "adaptive_player", "agent_loop", "audio_subscribers", "bus", "bus_bridge", "bus_bridge_runner", "capture", "channels", "cogos_agent_bridge", "draft_queue", "engine", "http_api", "inbound", "mcp_shim", "modality", "output_queue", "pipeline_state", "providers", "server", "session_registry", "vad"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
